@@ -1,3 +1,7 @@
+2009-08-12 Jérôme Schneider <jerome.schneider@gmail.com>
+		* Advanced search parameters added. pisi can now search only by name, summary
+                or description of a package.
+
 2009-08-11 Serdar Dalgıç <dalgic.srdr@gmail.com>
 		* (cli/build.py): pisi build command now works in debug mode unless -q
 		or --quiet parameter is passed.
